<resources>
    <string name="app_name">+Tax</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="backspace">-</string>
    <string name="totalnumber"> </string>
    <string name="beforetaxtotal"> </string>
    <string name="beforeTaxTotal">Total</string>
    <string name="numOfPeople">People</string>
    <string name="taxpercentage">Tax %</string>
    <string name="taxamount">Total Tax</string>
    <string name="total">Total</string>
    <string name="dollar">$</string>
    <string name="percent">Tip</string>
    <string name="question"></string>
    <string name="title_activity_tax_page">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
</resources>