<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:windowSoftInputMode="adjustResize"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/percent"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <TextView
        android:id="@+id/numOfPeopleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/numOfPeople"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/numOfPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@+id/numOfPeople"
        app:layout_constraintTop_toTopOf="@+id/numOfPeople"
        app:layout_constraintVertical_bias="0.541" />

    <EditText
        android:id="@+id/beforeTaxTotal"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="none"
        android:padding="20dp"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@null"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/numOfPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="261dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/total"

        android:textColor="#FFFFFF"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/endTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/totalnumber"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/numOfPeople"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/beforeTaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/beforeTaxTotal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/beforeTaxTotal"
        app:layout_constraintEnd_toEndOf="@+id/beforeTaxTotal"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="@+id/beforeTaxTotal"
        app:layout_constraintTop_toTopOf="@+id/beforeTaxTotal"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/percentTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="sevenBTNPush"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="eightBTNPush"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="nineBTNPush"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/roundsq"
                android:fontFamily="@font/roboto_medium"
                android:onClick="clearBTNPush"
                android:text="@string/clear"
                android:textColor="@color/clearbutton"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="fourBTNPush"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="fiveBTNPush"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="sixBTNPush"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circlesecondary"
                android:fontFamily="@font/roboto_medium"
                android:onClick="multiplyBTNPush"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:iconTint="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="oneBTNPush"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="twoBTNPush"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="threeBTNPush"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:iconTint="#FFFFFF" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"

                android:layout_weight="1"
                android:background="@drawable/circlesecondary"
                android:fontFamily="@font/roboto_medium"
                android:onClick="addBTNPush"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp">


            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="100"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="zeroBTNPush"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"

                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="@font/roboto_medium"
                android:onClick="pointBTNPush"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"

                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circlesecondary"
                android:fontFamily="@font/roboto_medium"
                android:onClick="equalsBTNPush"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </TableRow>
    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3895430812351617/1054415734"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

    </com.google.android.gms.ads.AdView>

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="12dp"
        android:max="100"
        android:progressDrawable="@drawable/tipbar"
        android:thumb="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>